# steegformer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  bench.sh
bench_results/20260330_233322_apple_m4_pro_virtual/: cpu.json  gpu.json  meta.json  python_cpu.json  python_mps.json
data/safetensors/: README.md  config.json
examples/: benchmark.rs  benchmark_fused.rs  dump_msl.rs  embed.rs  gpu_profile.rs  matmul_test.rs  reconstruct.rs
scripts/: benchmark_python.py  convert_to_safetensors.py  export_parity_vectors.py  generate_charts.py
src/: channel_vocab.rs  config.rs  data.rs  encoder.rs  lib.rs  weights.rs
src/model/: attention.rs  cpu_fused.rs  encoder_block.rs  feedforward.rs  fused.rs  kernels.rs  mod.rs  norm.rs  patch_embed.rs  positional.rs  steegformer.rs
tests/: forward_pass.rs  python_parity.rs
